--- a/guides/introduction/core-concepts-revisited.mdx
+++ b/guides/introduction/core-concepts-revisited.mdx
@@ -35,7 +35,7 @@ Key features of Actions include dynamic function calling, structured inputs and 
 *   **API Communication:** Facilitating the actual data exchange with the external service.
 *   **Error Handling:** Providing a consistent way to manage errors during communication.
 
-The system supports various integration types, including API Key, OAuth, and Basic Authentication. [1]
+The system supports various integration types, including API Key, OAuth, and Basic Authentication.
 
 ## Triggers
 
@@ -44,6 +44,6 @@ The system supports various integration types, including API Key, OAuth, and Bas
 *   A new commit in a GitHub repository.
 *   A new email arriving in a Gmail inbox.
 
-When these specific events occur, Triggers notify the AI agents, allowing them to respond proactively and intelligently. [1]
+When these specific events occur, Triggers notify the AI agents, allowing them to respond proactively and intelligently.
 
 Understanding these core components will provide a solid foundation as you explore the guides and start building powerful AI-driven solutions with Universal MCP.
