--- a/guides/introduction/what-is-universal-mcp.mdx
+++ b/guides/introduction/what-is-universal-mcp.mdx
@@ -14,6 +14,6 @@ Think of it as a universal adapter and control layer that empowers your AI model
 
 By providing a consistent and robust mechanism for these interactions, Universal MCP simplifies the development of sophisticated AI agents that can perform complex tasks and workflows that go beyond the boundaries of the AI model itself.
 
-The system is built around a core set of components: **Applications** and **Actions**, supported by an **Integration** system and **Triggers**. These components work together to provide a seamless experience for both developers creating new connections and AI models utilizing them. [1]
+The system is built around a core set of components: **Applications** and **Actions**, supported by an **Integration** system and **Triggers**. These components work together to provide a seamless experience for both developers creating new connections and AI models utilizing them.
 
 Whether you're looking to enable an AI to manage your GitHub issues, summarize Reddit posts, or automate email responses, Universal MCP provides the foundational tools to make it happen.
