--- a/index.mdx
+++ b/index.mdx
@@ -23,8 +23,8 @@ Start using Universal MCP
   <Card title="Universal MCP SDK" icon="code" href="https://github.com/universal-mcp/universal-mcp">
     The universal MCP SDK.
   </Card>
-  <Card title="Documentation" icon="book" href="/guides">
-    Guides to build your own application and agents using AgentR.
+  <Card title="Guides" icon="book" href="/guides">
+    Guides to build your own application and agents using AgentR and Universal MCP.
   </Card>
   <Card title="Examples" icon="flask" href="https://github.com/universal-mcp/examples">
     Example agents built using AgentR tools and Universal MCP.
