--- a/guides/building-agents/example-calculator-agent.mdx
+++ b/guides/building-agents/example-calculator-agent.mdx
@@ -2,7 +2,7 @@
 title: Building a Simple Calculator Agent with Langchain
 ---
 
-This guide demonstrates how to build a basic AI agent that can perform calculations using a custom tool, leveraging Langchain and Universal MCP. This example is based on `examples/langraph.py`.
+This guide demonstrates how to build a basic AI agent that can perform calculations using a custom tool, leveraging Langchain and Universal MCP. This example is based on [`examples/langraph.py`](https://github.com/universal-mcp/examples/blob/master/agents/langraph.py).
 
 ## Objective
 
@@ -96,7 +96,3 @@ Create an agent that can answer questions like "What is 2 + 2?".
 *   The agent receives the result and formulates the final answer, e.g., "The result is 4."
 
 This simple example illustrates the core workflow: defining a function, registering it as an MCP tool, and providing it to a Langchain agent to extend its capabilities. More complex agents will follow a similar pattern but with tools from various MCP `Applications`.
-
-```
-[1] examples/agents/langraph.py
-```
