--- a/guides/building-agents/example-github-agent.mdx
+++ b/guides/building-agents/example-github-agent.mdx
@@ -4,7 +4,7 @@ title: Building a GitHub Interaction Agent with OpenAI Tools
 
 # Example Guide: 
 
-This guide demonstrates how to create an AI agent that can perform actions on GitHub, such as starring a repository, using OpenAI's tool-calling feature and Universal MCP tools. This example is based on `examples/github.py`. [1]
+This guide demonstrates how to create an AI agent that can perform actions on GitHub, such as starring a repository, using OpenAI's tool-calling feature and Universal MCP tools. This example is based on [`examples/github.py`](https://github.com/universal-mcp/examples/blob/master/agents/github.py).
 
 ## Objective
 
@@ -184,7 +184,3 @@ Build an agent that can, when asked to "Star the repository username/repo_name":
 *   The result of the tool call is then processed (either printed or sent back to the LLM for a more conversational response).
 
 This demonstrates how to integrate Universal MCP with OpenAI's tool-calling capabilities, enabling agents to interact with services like GitHub in a natural language-driven way.
-
-```
-[1] examples/agents/github.py
-```
