--- a/guides/building-agents/example-tweet-interactions.mdx
+++ b/guides/building-agents/example-tweet-interactions.mdx
@@ -2,7 +2,7 @@
 title: Automating Tweet Interactions with Langchain
 ---
 
-This guide illustrates how to create an AI agent capable of liking a specific tweet on behalf of the current user. It uses tools from the Universal MCP `twitter` application. The example is based on `examples/like_tweet.py`.
+This guide illustrates how to create an AI agent capable of liking a specific tweet on behalf of the current user. It uses tools from the Universal MCP `twitter` application. The example is based on [`examples/like_tweet.py`](https://github.com/universal-mcp/examples/blob/master/agents/like_tweet.py).
 
 ## Objective
 
@@ -119,7 +119,3 @@ Develop an agent that can:
 *   The agent reports the success or failure of the operation.
 
 This example shows how an agent can perform a sequence of tool calls, using the output of one tool (user ID) as input for another, to accomplish a task.
-
-```
-[1] examples/agents/like_tweet.py
-```
