--- a/guides/building-agents/using-tools-with-openai-functions.mdx
+++ b/guides/building-agents/using-tools-with-openai-functions.mdx
@@ -102,9 +102,4 @@ Universal MCP tools can be easily adapted for use with the OpenAI API.
      print(final_ai_response)
     ```
 
-This process allows you to leverage OpenAI's powerful models for reasoning and tool selection, while Universal MCP handles the actual execution of the tools and interaction with external services. The `examples/github.py` script provides a practical demonstration of this flow.
-
-```
-[1] tools/adapters.py - convert_tool_to_openai_tool, ToolFormat
-[2] examples/agents/github.py
-```
+This process allows you to leverage OpenAI's powerful models for reasoning and tool selection, while Universal MCP handles the actual execution of the tools and interaction with external services. The [`examples/github.py`](https://github.com/universal-mcp/examples/blob/master/agents/github.py) script provides a practical demonstration of this flow.
