--- a/guides/integrations-credentials/secure-credential-storage.mdx
+++ b/guides/integrations-credentials/secure-credential-storage.mdx
@@ -2,7 +2,7 @@
 title: Secure Credential Storage
 ---
 
-Managing API keys, tokens, and other sensitive credentials securely is a critical aspect of building robust and safe applications. Universal MCP provides a flexible **Store** system to handle the storage and retrieval of these credentials.
+Managing API keys, tokens, and other sensitive credentials securely is a critical aspect of building robust and safe applications. Universal MCP provides a flexible [**Store**](https://github.com/universal-mcp/universal-mcp/blob/master/src/universal_mcp/stores/store.py) system to handle the storage and retrieval of these credentials.
 
 ## The `BaseStore` Interface
 
@@ -107,10 +107,3 @@ The `store_from_config` utility function is used internally to create the approp
 *   Always handle `KeyNotFoundError` and other `StoreError` exceptions when directly interacting with stores.
 
 By choosing the right store, you can ensure your application's credentials are managed appropriately for your security and operational needs.
-
-```
-[1] stores/store.py - BaseStore, MemoryStore, EnvironmentStore, KeyringStore class definitions
-[2] stores/README.md - Overview and usage examples of stores
-[3] config.py - StoreConfig, ServerConfig.store, IntegrationConfig.store
-[4] stores/__init__.py - store_from_config function
-```
