--- a/guides/applications-tools/understanding-applications.mdx
+++ b/guides/applications-tools/understanding-applications.mdx
@@ -9,7 +9,7 @@ In Universal MCP, **Applications** are the fundamental building blocks for conne
 An Application in Universal MCP is responsible for:
 
 1.  **Connection Management:** Establishing and maintaining communication with the external service. This could involve setting base URLs for HTTP APIs or handling GraphQL client instances.
-2.  **Authentication:** Securely managing and applying the necessary credentials (API keys, OAuth tokens, etc.) to authenticate requests to the service. This is often handled in conjunction with an [Integration](#guides/integrations-credentials/understanding-integrations).
+2.  **Authentication:** Securely managing and applying the necessary credentials (API keys, OAuth tokens, etc.) to authenticate requests to the service. This is often handled in conjunction with an [Integration](/guides/integrations-credentials/understanding-integrations).
 3.  **Defining Operations (Actions/Tools):** Exposing the capabilities of the external service as a list of well-defined functions (Actions or Tools) that an AI agent can call.
 4.  **Data Transformation:** Potentially transforming data to and from the format expected by the external service and the format understood by the AI agent.
 5.  **Error Handling:** Managing and standardizing errors that might occur during interaction with the external service.
@@ -19,19 +19,19 @@ An Application in Universal MCP is responsible for:
 Universal MCP provides several base classes to simplify the development of new applications, catering to common communication patterns:
 
 *   **`BaseApplication`**:
-    This is the abstract base class that all applications must inherit from. It defines the common interface, including the essential `list_tools()` method which every application must implement to declare the tools it provides. [1]
+    This is the abstract base class that all applications must inherit from. It defines the common interface, including the essential `list_tools()` method which every application must implement to declare the tools it provides.
 
 *   **`APIApplication`**:
     This class extends `BaseApplication` and is designed for applications that interact with standard HTTP/RESTful APIs. It includes:
     *   An integrated `httpx.Client` for making HTTP requests (`_get`, `_post`, `_put`, `_delete`, `_patch`).
     *   Logic to automatically include authentication headers based on the configured `Integration`.
-    *   Management of a `base_url` for the API. [2]
+    *   Management of a `base_url` for the API.
 
 *   **`GraphQLApplication`**:
     A specialized class extending `BaseApplication` for services that use GraphQL APIs. It provides:
     *   An integrated `gql.Client` for executing GraphQL queries and mutations.
     *   Similar to `APIApplication`, it handles authentication headers derived from its `Integration`.
-    *   Methods like `query()` and `mutate()` for interacting with the GraphQL endpoint. [3]
+    *   Methods like `query()` and `mutate()` for interacting with the GraphQL endpoint.
 
 ## Creating a New Application
 
@@ -44,9 +44,4 @@ The key aspects you'll implement are:
 
 By encapsulating the specifics of interacting with an external service within an Application, Universal MCP promotes modularity and reusability. Your AI agents can then interact with a variety of services through a consistent tool-based interface.
 
-```
-[1] applications/application.py - BaseApplication class
-[2] applications/application.py - APIApplication class
-[3] applications/application.py - GraphQLApplication class
-[4] applications/README.md - Overview of creating a new application
-```
+Refer to [`applications/application.py`](https://github.com/universal-mcp/universal-mcp/blob/master/src/universal_mcp/applications/application.py) for more information.
