--- a/guides/integrations-credentials/understanding-integrations.mdx
+++ b/guides/integrations-credentials/understanding-integrations.mdx
@@ -9,14 +9,14 @@ In Universal MCP, an **Integration** is a crucial component that defines how an 
 The primary responsibilities of an Integration object are:
 
 1.  **Authorization:** Implementing the specific steps required to authorize the application with the external service. This might involve redirecting a user for an OAuth flow or prompting for an API key.
-2.  **Credential Storage and Retrieval:** Securely obtaining and providing credentials (like API keys, access tokens, refresh tokens) when an Application needs them to make an authenticated request. This is often done in conjunction with a [Store](#guides/integrations-credentials/secure-credential-storage).
+2.  **Credential Storage and Retrieval:** Securely obtaining and providing credentials (like API keys, access tokens, refresh tokens) when an Application needs them to make an authenticated request. This is often done in conjunction with a [Store](/guides/integrations-credentials/secure-credential-storage).
 3.  **Credential Refresh (for OAuth):** Handling the process of refreshing access tokens when they expire, ensuring continuous access for the Application.
 
 By abstracting these concerns into an `Integration` object, `Applications` can focus on the logic of interacting with the service's API endpoints, rather than the boilerplate of authentication.
 
 ## The `Integration` Base Class
 
-All specific integration types in Universal MCP inherit from the `Integration` abstract base class (defined in `integrations/integration.py`). This class defines a common interface with key methods: [1]
+All specific integration types in Universal MCP inherit from the `Integration` abstract base class (defined in [`integrations/integration.py`](https://github.com/universal-mcp/universal-mcp/blob/master/src/universal_mcp/integrations/integration.py)). This class defines a common interface with key methods:
 
 *   `__init__(self, name: str, store: BaseStore | None = None)`: Initializes the integration with a name (often used as a key for storing/retrieving credentials) and an optional `Store` instance.
 *   `authorize() -> str | dict[str, Any]`: Abstract method to initiate the authorization process. Returns information needed to complete authorization, like a URL or instructions.
@@ -27,9 +27,9 @@ All specific integration types in Universal MCP inherit from the `Integration` a
 
 Universal MCP provides several built-in integration types:
 
-*   **`ApiKeyIntegration`**: For services that use simple API key-based authentication. [1]
-*   **`OAuthIntegration`**: For services that use OAuth 2.0 flows (though the current implementation in `integration.py` seems to be a more general OAuth outline and might need further details for a full 2.0 flow with refresh tokens, etc.).
-*   **`AgentRIntegration`**: A specialized integration for services managed through the AgentR platform. It uses an AgentR API key to securely fetch service-specific credentials managed by AgentR. [1, 2]
+*   **`ApiKeyIntegration`**: For services that use simple API key-based authentication.
+*   **`OAuthIntegration`**: For services that use OAuth 2.0 flows.
+*   **`AgentRIntegration`**: A specialized integration for services managed through the AgentR platform. It uses an AgentR API key to securely fetch service-specific credentials managed by AgentR.
 
 You typically associate an `Integration` instance with an `Application` instance when you create it:
 
@@ -44,13 +44,4 @@ api_key_integration = ApiKeyIntegration(name="MY_SERVICE_API_KEY", store=my_stor
 my_app = APIApplication(name="myservice", integration=api_key_integration)
 ```
 
-In the `ServerConfig` (e.g., in your `local_config.json`), you can also define integrations for specific applications. [3]
-
-The `integrations/README.md` file provides a high-level overview of these concepts. [4]
-
-```
-[1] integrations/integration.py - Integration class, ApiKeyIntegration, AgentRIntegration
-[2] utils/agentr.py - AgentrClient class
-[3] config.py - IntegrationConfig within AppConfig
-[4] integrations/README.md
-```
+In the `ServerConfig` (e.g., in your `local_config.json`), you can also define integrations for specific applications.
