--- a/guides/building-agents/example-github-agent.mdx
+++ b/guides/building-agents/example-github-agent.mdx
@@ -172,7 +172,7 @@ Build an agent that can, when asked to "Star the repository username/repo_name":
         asyncio.run(main())
 
     ```
-    The `github.py` example directly processes the tool call and prints the result without necessarily sending it back to the model for a final summarization, but the structure for doing so is shown above. [1]
+    The `github.py` example directly processes the tool call and prints the result without necessarily sending it back to the model for a final summarization, but the structure for doing so is shown above.
 
 ## How It Works
 
