--- a/guides/getting-started/installation.mdx
+++ b/guides/getting-started/installation.mdx
@@ -35,7 +35,7 @@ Refer to [`cli.py`](https://github.com/universal-mcp/universal-mcp/blob/master/s
 
 For a list of currently supported applications for this installation method, you can often find them by running the command without an app name or with a non-existent one, or refer to the [`utils/installation.py`](https://github.com/universal-mcp/universal-mcp/blob/master/src/universal_mcp/utils/installation.py) file in the SDK.
 
-Supported applications include: `claude`, `cursor`, `cline`, `continue`, `goose`, `windsurf`, `zed`. [2]
+Supported applications include: `claude`, `cursor`, `cline`, `continue`, `goose`, `windsurf`, `zed`. 
 
 **Note:** While `universal_mcp install` helps with client-side configuration for certain pre-defined apps, the core way to make tools available to your MCP server (especially a `LocalServer`) is by configuring them in your server's configuration file, which we'll cover next. Dynamically loaded applications via `app_from_slug` also rely on `uv` for package installation.
 
