--- a/guides/introduction/core-concepts-revisited.mdx
+++ b/guides/introduction/core-concepts-revisited.mdx
@@ -13,7 +13,7 @@ To effectively use Universal MCP, it's helpful to have a clear understanding of 
 *   **Operation Definition:** Specifying the available functions (Actions) the service offers.
 *   **Response & Error Handling:** Standardizing how responses and errors from the service are managed.
 
-Universal MCP provides base classes like `BaseApplication`, `APIApplication` (for HTTP APIs), and `GraphQLApplication` (for GraphQL APIs) to simplify the creation of new application integrations. [1]
+Universal MCP provides base classes like `BaseApplication`, `APIApplication` (for HTTP APIs), and `GraphQLApplication` (for GraphQL APIs) to simplify the creation of new application integrations.
 
 ## Actions
 
@@ -24,7 +24,7 @@ Universal MCP provides base classes like `BaseApplication`, `APIApplication` (fo
 *   Process data.
 *   Interact with real-world systems in a defined way.
 
-Key features of Actions include dynamic function calling, structured inputs and outputs, integration with various authentication methods, error handling, and tool management. You create custom actions by defining methods within an application class. [1]
+Key features of Actions include dynamic function calling, structured inputs and outputs, integration with various authentication methods, error handling, and tool management. You create custom actions by defining methods within an application class.
 
 ## Integration
 
